# alto-terminal

./: .claude.md  .env.example  CLAUDE.md  README.md  agent.py  main.py  pyproject.toml  test_tui_standalone.py  tui_visual_demo.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  TUTORIAL.md
src/alto_terminal/: audio_client_orchestrator.py  audio_input_handler.py  audio_mixer.py  audio_output_handler.py  config.py  livekit_network_manager.py  tui_manager.py  utils.py
tests/integration/: test_full_audio_flow.py
tests/unit/: test_audio_client_orchestrator.py  test_audio_input_handler.py  test_audio_mixer.py  test_audio_output_handler.py  test_config.py  test_livekit_network_manager.py
